--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+Version 2.91.5
+~~~~~~~~~~~~~~
+Released: 2011-01-11
+
+* Translations
+ - Added UG translation (Gheyret T.Kenji)
+ - Added Vietnamese translation (Nguyễn Thái Ngọc Duy)
+ - Updated Estonian translation (Ivar Smolin)
+ - Updated Italian translation (Francesco Groccia)
+ - Updated Norwegian bokmål translation (Torstein Adolf Winterseth
+ - Updated Punjabi translation (A S Alam)
+ - Updated Slovenian translation (Andrej Žnidaršič)
+ - Updated Swedish translation (Daniel Nylander)
+ - Updated Traditional Chinese translation(Hong Kong and Taiwan) (Chao-Hsiung Liao)
+
+* Bugfix:
+ - Fix GTK3 API break; gdk_cursor_unref (Richard Hughes)
+ - Fix GTK3 API break; gdk_window_foreign_new_for_display() no longer exists (Richard Hughes)
+ - Fix GTK3 API break; gdk_x11_drawable_get_xid() no longer exists (Richard Hughes)
+ - GUdev now requires us to set G_UDEV_API_IS_SUBJECT_TO_CHANGE to be able to build (Richard Hughes)
+
 Version 2.91.3
 ~~~~~~~~~~~~~~
 Released: 2010-12-01
