Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -2,14 +2,14 @@
 # Spanish translation for gnome-color-manager.
 # Copyright (C) 2009 gnome-color-manager's COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-color-manager package.
-# Jorge González <jorgegonz@svn.gnome.org>, 2009, 2010.
+# Jorge González <jorgegonz@svn.gnome.org>, 2009, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-10-13 14:31+0000\n"
-"PO-Revision-Date: 2010-10-20 08:20+0200\n"
+"POT-Creation-Date: 2011-01-01 11:28+0000\n"
+"PO-Revision-Date: 2011-02-20 15:40+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -436,7 +436,7 @@ msgstr "Preferencias básicas"
 
 #: C/gnome-color-manager.xml:222(title)
 msgid "GNOME Color Manager basic tab"
-msgstr "Solapa básica del Gestor de color de GNOME"
+msgstr "Pestaña básica del Gestor de color de GNOME"
 
 #: C/gnome-color-manager.xml:235(para)
 msgid "Select the device."
@@ -498,7 +498,7 @@ msgstr "Preferencias avanzadas"
 
 #: C/gnome-color-manager.xml:288(title)
 msgid "GNOME Color Manager advanced tab"
-msgstr "Solapa avanzada del Gestor de color de GNOME"
+msgstr "Pestaña avanzada del Gestor de color de GNOME"
 
 #: C/gnome-color-manager.xml:297(para)
 msgid "This allows you to adjust a calibrated device or generated profile."
@@ -574,7 +574,7 @@ msgstr "Visor de perfiles"
 
 #: C/gnome-color-manager.xml:343(title)
 msgid "GNOME Color Manager profiles tab"
-msgstr "Solapa de perfiles del Gestor de color de GNOME"
+msgstr "Pestaña de perfiles del Gestor de color de GNOME"
 
 #: C/gnome-color-manager.xml:352(para)
 msgid "This allows you to view details about installed profiles."
