--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Version 2.91.92
+~~~~~~~~~~~~~~~
+Released: 2011-03-21
+
+* Translations
+ - Updated Greek docs translation (Michael Kotsarinis)
+ - Updated Hungarian translation (Gabor Kelemen)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Portuguese translation (Duarte Loreto)
+
+* Bugfix:
+ - Add priority for gnome-settings-daemon plugin schema (Frederic Crozat)
+ - Remove the gtk-doc support (Richard Hughes)
+ - Use plugindir from gnome-settings-daemon pkg-config file (Frederic Crozat)
+
 Version 2.91.90
 ~~~~~~~~~~~~~~~
 Released: 2011-02-22
