Updated Swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -1,14 +1,14 @@
 # Swedish translation for gnome-color-manager.
-# Copyright (C) 2009, 2010 Free Software Foundation, Inc.
+# Copyright (C) 2009, 2010, 2011 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gnome-color-manager package.
-# Daniel Nylander <po@danielnylander.se>, 2009, 2010.
+# Daniel Nylander <po@danielnylander.se>, 2009, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-12-30 00:10+0100\n"
-"PO-Revision-Date: 2010-12-30 09:57+0100\n"
+"POT-Creation-Date: 2011-04-02 15:48+0200\n"
+"PO-Revision-Date: 2011-04-02 15:54+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -58,11 +58,11 @@ msgstr "Om inställd till TRUE så kommer hinten __ICC_PROFILE att ställas in, 
 
 #: ../data/gnome-color-manager.schemas.in.h:4
 msgid "If set to TRUE then the fine tuning controls are visible. This allows the user to change the display profile outside of what the ICC profile suggests and is only recommended for advanced users."
-msgstr ""
+msgstr "Om inställd till TRUE så är finjusteringskontrollerna synliga. Detta låter användaren att ändra visningsprofilen utanför det som ICC-profilen föreslår och rekommenderas endast för erfarna användare."
 
 #: ../data/gnome-color-manager.schemas.in.h:5
 msgid "If set to TRUE then the video LUT is set with the display profile"
-msgstr ""
+msgstr "Om inställd till TRUE så ställs videons LUT in med skärmprofilen"
 
 #: ../data/gnome-color-manager.schemas.in.h:6
 msgid "Set the _ICC_PROFILE hint for applications."
@@ -106,15 +106,15 @@ msgstr "Längd mellan sändning av notifieringar om att kalibrera om en skrivare
 
 #: ../data/gnome-color-manager.schemas.in.h:16
 msgid "The length of calibration, as this is proportional to the accuracy. The option 'short' creates a quick profile, 'normal' a regular one, and 'long' takes a really long time, but is more precise and creates a better profile. Use 'ask' if you want the user to choose."
-msgstr ""
+msgstr "Längden för kalibreringen, efter detta är proportionellt till noggrannheten. Alternativet \"short\" skapar en snabb profil, \"normal\" en vanlig profil samt \"long\" tar verkligen lång tid, men är mer precis och skapar en bättre profil. Använd \"ask\" om du vill att användaren ska välja."
 
 #: ../data/gnome-color-manager.schemas.in.h:17
 msgid "The rendering intent to use for softproofs, e.g. 'perceptual'."
-msgstr ""
+msgstr "Återgivningsmodellen att använda för korrekturläsning (softproofs), t.ex. \"perceptual\"."
 
 #: ../data/gnome-color-manager.schemas.in.h:18
 msgid "The rendering intent to use for the display, e.g. 'perceptual'."
-msgstr ""
+msgstr "Återgivningsmodellen att använda för skärmen, t.ex. \"perceptual\"."
 
 #: ../data/gnome-color-manager.schemas.in.h:19
 msgid "This is the number of seconds in between notifying the user to recalibrate each display device. Set to 0 to disable the notification."
@@ -1835,7 +1835,7 @@ msgstr "Profiler"
 
 #: ../data/gcm-prefs.ui.h:58
 msgid "Program the video card with the adjusted color values so all windows are color corrected"
-msgstr ""
+msgstr "Programmera grafikkortet med de justerade färgvärdena så alla fönster färgkorrigeras"
 
 #. What mode to use for display rendering intent
 #: ../data/gcm-prefs.ui.h:61
@@ -1866,15 +1866,15 @@ msgstr "Korrekturläsning:"
 
 #: ../data/gcm-prefs.ui.h:69
 msgid "The rendering intent is how one gamut size is mapped to another."
-msgstr ""
+msgstr "Återgivningsmodellen är hur en gamut-storlek mappas till en annan."
 
 #: ../data/gcm-prefs.ui.h:70
 msgid "The rendering intent to use when transforming from the image gamut to the device output gamut"
-msgstr ""
+msgstr "Återgivningsmodellen att använda vid transformering från bildens gamut till gamut för enhetens utmatning"
 
 #: ../data/gcm-prefs.ui.h:71
 msgid "The rendering intent to use when transforming from the image gamut to the display gamut"
-msgstr ""
+msgstr "Återgivningsmodellen att använda vid transformering från bildens gamut till gamut för skärmen"
 
 #: ../data/gcm-prefs.ui.h:72
 msgid "These settings control how color management is applied to your desktop."
