--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Version 3.0.0
+~~~~~~~~~~~~~
+Released: 2011-04-04
+
+* Translations
+ - Updated British English translation (Bruce Cowan)
+ - Updated German translation (Wolfgang Stöggl)
+ - Updated Italian translation (Francesco Groccia)
+ - Updated Korean translation (sangu)
+ - Updated Russian translation (Alexandre Prokoudine)
+
+* Bugfix:
+ - Use /org/gnome as starting path for schemas (Richard Hughes)
+
 Version 2.91.92
 ~~~~~~~~~~~~~~~
 Released: 2011-03-21
