Update Simplified Chinese translaton

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,14 +4,16 @@
 # 甘露 <rhythm.gan@gmail.com>, 2010.
 # Eleanor Chen <chenyueg@gmail.com>, 2010.
 # Aron Xu <aronxu@gnome.org>, 2010.
+# Xianyou Jin <Jinking.this@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-16 23:23+0800\n"
-"PO-Revision-Date: 2010-09-16 23:30+0800\n"
-"Last-Translator: Aron Xu <happyaron.xu@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"color-manager&keywords=I18N+L10N\n"
+"POT-Creation-Date: 2011-03-18 17:29+0000\n"
+"PO-Revision-Date: 2010-09-26 15:18+0800\n"
+"Last-Translator: Xianyou Jin <Jinking.this@gmail.com>\n"
 "Language-Team: Chinese (China) <i18n-zh@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,9 +55,9 @@ msgid ""
 "long time, but now use the same value as Microsoft. Microsoft has always "
 "used a value of 2.2."
 msgstr ""
-"伽马值调整可影响相应显示器的色彩。Linux 通常使用 1.0 的伽马值，但与 Windows XP "
-"或 OSX 相比，这使得显示器看上去色彩惨淡。苹果在以前很长一段时间都使用 1.8 的"
-"值，但现在也用和微软一样的伽马值，而微软一直以来都使用 2.2 的值。"
+"伽马值调整可影响相应显示器的色彩。Linux 通常使用 1.0 的伽马值，但与 Windows "
+"XP 或 OSX 相比，这使得显示器看上去色彩惨淡。苹果在以前很长一段时间都使用 1.8 "
+"的值，但现在也用和微软一样的伽马值，而微软一直以来都使用 2.2 的值。"
 
 #: ../data/gnome-color-manager.schemas.in.h:2
 msgid ""
@@ -523,28 +525,28 @@ msgstr "读取 %s 色带就绪"
 msgid ""
 "Place the colorimeter on the area of white next to the letter and click and "
 "hold the measure switch."
-msgstr ""
+msgstr "将色度计在字母旁边的空白区域处，按住测量开关。"
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2496
 msgid ""
 "Slowly scan the target line from left to right and release the switch when "
 "you get to the end of the page."
-msgstr ""
+msgstr "从左至右缓慢扫描目标行, 当到达页末时释放开关。"
 
 #. TRANSLATORS: dialog message, the sensor has to be above the line
 #: ../src/gcm-calibrate-argyll.c:2500
 msgid ""
 "Ensure the center of the device is properly aligned with the row you are "
 "trying to measure."
-msgstr ""
+msgstr "确保设备的中心与所要测量的行正确对齐的。"
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2504
 msgid ""
 "If you make a mistake just release the switch and you'll get a chance to try "
 "again."
-msgstr ""
+msgstr "如果你出错了只需释放开关，你就有重试的机会。"
 
 #. TRANSLATORS: title, printing reference files to media
 #: ../src/gcm-calibrate-argyll.c:2642
@@ -1675,27 +1677,27 @@ msgid "Color Management D-Bus Service"
 msgstr "色彩管理 D-Bus 服务"
 
 #. TRANSLATORS: this is the profile creation date strftime format
-#: ../src/gcm-utils.c:514
+#: ../src/gcm-utils.c:520
 msgid "%B %e %Y, %I:%M:%S %p"
 msgstr "%B %e %Y, %I:%M:%S %p"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
-#: ../src/gcm-utils.c:527
+#: ../src/gcm-utils.c:533
 msgid "Perceptual"
 msgstr "图像感知式"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
-#: ../src/gcm-utils.c:531
+#: ../src/gcm-utils.c:537
 msgid "Relative colormetric"
 msgstr "相对色彩度量"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
-#: ../src/gcm-utils.c:535
+#: ../src/gcm-utils.c:541
 msgid "Saturation"
 msgstr "饱和度"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
-#: ../src/gcm-utils.c:539
+#: ../src/gcm-utils.c:545
 msgid "Absolute colormetric"
 msgstr "绝对色彩度量"
 
@@ -1962,19 +1964,19 @@ msgstr "软校样："
 
 #: ../data/gcm-prefs.ui.h:69
 msgid "The rendering intent is how one gamut size is mapped to another."
-msgstr ""
+msgstr "色彩匹配方案是用来描述一个色域大小是如何映射到另一个色域的。"
 
 #: ../data/gcm-prefs.ui.h:70
 msgid ""
 "The rendering intent to use when transforming from the image gamut to the "
 "device output gamut"
-msgstr ""
+msgstr "从图像色域传输到设备输出色域时所使用的色彩匹配方案"
 
 #: ../data/gcm-prefs.ui.h:71
 msgid ""
 "The rendering intent to use when transforming from the image gamut to the "
 "display gamut"
-msgstr ""
+msgstr "从图像色域传输到显示色域时所使用的色彩匹配方案"
 
 #: ../data/gcm-prefs.ui.h:72
 msgid "These settings control how color management is applied to your desktop."
@@ -2027,7 +2029,6 @@ msgstr "恢复到默认(_R)"
 msgid "_Set profile for color managed applications"
 msgstr "为色彩管理程序设定配置文件(_S)"
 
-#, fuzzy
 #~| msgid "The description of the profile"
 #~ msgid "Choose the precision of the profile"
 #~ msgstr "配置文件的描述"
